2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* log_repaint.c: (logview_create_model):
	* loglist.c: (loglist_find_directory), (loglist_find_log),
	(loglist_unbold_log), (loglist_bold_log), (loglist_select_log),
	(loglist_remove_log), (loglist_add_log), (loglist_init):
	* logrtns.c: (log_extract_filename):
	* logrtns.h:
	* logview.c: (logview_add_log_from_name),
	(logview_add_logs_from_names), (logview_file_selected_cb):
	* main.c: (main): Add a tree view in the side bar to group logs by
	directory.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* log_repaint.c (logview_update_version_bar): Make sure to show the version bar.
	* logview.c (logview_search): Make sure to show the filter bar.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* misc.c (month): 
	* logview.c:
	* loglist.c: Remove the restoration_complete variable. Use
	GTK_WIDGET_VISIBLE instead.
	
2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* logview.h:
	* main.c: (main): Be smarter when showing the widget.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* main.c (main): Show a "busy" cursor while loading logs. 

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* calendar.c: (calendar_class_finalize):
	* loglist.c: (loglist_finalize):
	* logview-findbar.c: (iter_is_visible), (logview_findbar_finalize):
	* logview.c: (logview_window_finalize): Finalize the GObjects.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* userprefs.c (prefs_create_defaults): Actually parse all the
	default logs.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* calendar.c: (calendar_init_data):
	* calendar.h:
	* logview.c: (logview_calendar_set_state),
	(logview_window_get_property), (logview_window_class_init): Use
	GObject properties.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* misc.c (locale_to_utf8): Better logic.
	* userprefs.c (prefs_store_window_size): Remove a few FIXMEs.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>
